[tool.poetry]
name = "pgbackup"
version = "0.1.0"
description = "A database backup utility for postgresql using python cli"
authors = ["Debasish Bose <devbose2008@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
